@@ -56,10 +56,11 @@
 		<!-- Driver Dependencies -->
 		<azure.keyvault.version>1.2.1</azure.keyvault.version>
 		<azure.adal4j.version>1.6.4</azure.adal4j.version>
-		<rest.client.version>1.6.5</rest.client.version>
+		<rest.client.version>1.6.7</rest.client.version>
 		<osgi.core.version>6.0.0</osgi.core.version>
 		<osgi.comp.version>5.0.0</osgi.comp.version>
 		<antlr.runtime.version>4.7.2</antlr.runtime.version>
+
 		<!-- JUnit Test Dependencies -->
 		<junit.platform.version>[1.3.2, 1.4.2]</junit.platform.version>
 		<junit.jupiter.version>5.4.2</junit.jupiter.version>
@@ -369,11 +370,12 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M1</version>
 				<configuration>
-					<argLine>
-						${argLine} --illegal-access=permit
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>${argLine} --illegal-access=permit -Xmx1024m
+						-XX:MaxPermSize=256m
 					</argLine>
-					<excludedGroups>
-						${excludedGroups}</excludedGroups>
+					<excludedGroups>${excludedGroups}</excludedGroups>
 				</configuration>
 			</plugin>
 			<plugin>
